--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -37,12 +37,32 @@ body{
     background-color: #f8d7da;
 }
 
-h1{
-    width: 94%;
+#header_menu {
+    width: 57%;
     padding-top: 17px;
     padding-left: 3%;
-    font-size: 24px;
+    display: inline-block;
+}
+
+#employee_name {
+    color: #cccccc;
+    width: 36%;
+    padding-right: 3%;
+    text-align: right;
+    display: inline-block;
+}
+
+#header a {
     color: #eeeeee;
+}
+
+h1 a {
+    color: #eeeeee;
+}
+
+h1 {
+    font-size: 24px;
+    display: inline;
 }
 
 h2{
@@ -112,4 +132,33 @@ tr.row0 {
 
 select {
     height: 30px;
+}
+
+table#report_list th {
+    font-weight: bold;
+    padding: 10px 2%;
+}
+
+table#report_list .report_name {
+    width: 20%;
+    padding: 10px 2%;
+}
+table#report_list .report_date {
+    width: 20%;
+}
+
+table#report_list .report_title {
+    width: 37%;
+}
+
+table#report_list .report_action {
+    width: 13%;
+}
+
+pre {
+    font-family: "Hiragino Kaku Gothic Pro",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
+}
+
+h3 {
+    font-size: larger;
 }
